# ankinize

./: README.md  anki.py  cloud_vision.py  extract_importance.py  main.py  model.py  pack_to_json.py  page_dewarp.py  preprocess.py  pyproject.toml  utils.py
